商品图片修正

--- a/weMarketWeb/client/orders/orders.html
+++ b/weMarketWeb/client/orders/orders.html
@@ -36,8 +36,7 @@
       <div class="ft-rigtht"><i class="fa fa-angle-right fa-fw"></i></div>
       <div class="body">
         <div class="productImg">
-          <!--<img src="{{product.product_img}}"/>-->
-          <img src="http://shop.ectouch.cn/v2/images/201509/thumb_img/17919_thumb_G_1441858552832.jpg" />
+          <img src="{{product.product_img}}"/>
         </div>
         <h4>{{product.product_name}}</h4>
         <p>商品数量：{{total_num}}</p>
