--- a/weMarketWeb/client/shopping/shopping.html
+++ b/weMarketWeb/client/shopping/shopping.html
@@ -6,7 +6,7 @@
   <ul class="shopping-list">
   {{#each lists}}
     <li class="shopping-item">
-      <img src="http://shop.ectouch.cn/v2/images/201509/thumb_img/17919_thumb_G_1441858552832.jpg"/>
+      <img src="{{product_img}}"/>
       <h4>{{product_name}}</h4>
       <p class="price">￥ {{getTotalPrice}}</p>
       <div class="div-num" style="margin-bottom: 0;">
