--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -7,9 +7,10 @@
   <!-- Swiper start-->
   <div class="swiper-container">
     <div class="swiper-wrapper">
-      <div class="swiper-slide">Slide 1</div>
-      <div class="swiper-slide">Slide 2</div>
-      <div class="swiper-slide">Slide 3</div>
+      {{#each images}}
+      <div class="swiper-slide">
+        <img src="{{this}}" style="width: 100%; height: 100%; object-fit: cover;"/></div>
+      {{/each}}
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -47,6 +48,9 @@
     <li class="active">商品描述</li>
     <li>规格参数</li>
   </ul>
+  <div class="product-content">
+    {{{content}}}
+  </div>
 
   <div class="filter-btn dis-box">
     <a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
@@ -63,7 +67,7 @@
   <div class="weui-popup__modal" style="background: #fff;">
     <div class="product-attr">
       <div class="title-area">
-        <img src="http://gi1.mlist.alicdn.com/bao/uploaded/i1/1793663235/TB2sP_wXVXXXXaGXXXXXXXXXXXX_!!1793663235.jpg" alt="鲜鱿鱼足片 办公休闲零食 200g  休闲零嘴" class="product-list-img">
+        <img src="{{mainImage}}" alt="鲜鱿鱼足片 办公休闲零食 200g  休闲零嘴" class="product-list-img">
         <div class="close-popup"><i class="weui-icon-cancel"></i></div>
         <h4>{{name}}</h4>
         <p class="sale-price">￥ {{sale_price}}</p>
