搜索结果页商品图片

--- a/weMarketWeb/client/search/search.html
+++ b/weMarketWeb/client/search/search.html
@@ -31,7 +31,7 @@
     {{#each getProducts}}
       <li class="product-item">
         <a href="/product/{{_id}}?s={{seller_id}}">
-        <img src="http://shop.ectouch.cn/v2/images/201509/thumb_img/17919_thumb_G_1441858552832.jpg"/>
+        <img src="{{mainImage}}"/>
         <div class="product-info">
           <h3 class="product-name">{{name}}</h3>
           <p class="product-price">￥{{sale_price}}元 </p>
