--- a/weMarketWeb/client/orders/createOrder.html
+++ b/weMarketWeb/client/orders/createOrder.html
@@ -19,8 +19,8 @@
     {{#each shoppings}}
     <li>
       <div class="product-name">{{product_name}}</div>
-      <div class="product-num"> × {{product_num}}</div>
-      <div class="product-price">￥ {{getProductTotalPrice}} 元</div>
+      <div class="product-num" id="total_num" data-num="{{getTotalNum}}"> × {{product_num}}</div>
+      <div class="product-price">￥ {{product_price}} 元</div>
     </li>
     {{/each}}
   </ul>
@@ -30,8 +30,7 @@
       <div class="weui-form-preview__hd">
           <div class="weui-form-preview__item">
               <label class="weui-form-preview__label">付款金额</label>
-              <input style="visibility: hidden;display: none;" id="total_price" value="{{getTotalPrice}}"/>
-              <em class="weui-form-preview__value">¥ {{getTotalPrice}}</em>
+              <em class="weui-form-preview__value" id="total_price" data-price="{{getTotalPrice}}">¥ {{getTotalPrice}}</em>
           </div>
       </div>
       <div class="weui-form-preview__bd">
