--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -26,14 +26,14 @@
     </div>
   </div>
 
-  <div class="weui-cells">
+  <!--<div class="weui-cells">
     <a class="weui-cell weui-cell_access addToCart" href="javascript:;">
       <div class="weui-cell__bd">
         <p>已选</p>
       </div>
       <div class="weui-cell__ft">请选择</div>
     </a>
-  </div>
+  </div>-->
 
   <div class="weui-cells">
     <a class="weui-cell weui-cell_access" href="javascript:;">
@@ -53,12 +53,13 @@
   </div>
 
   <div class="filter-btn dis-box">
-    <a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
+    <!--<a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
       <i class="fa fa-shopping-cart"></i>
       <p style="margin: 0;">购物车</p>
     </a>
     <a type="button" class="btn-cart button addToCart">加入购物车</a>
-    <a type="button" class="btn-submit button addToCart">立即购买</a>
+    <a type="button" class="btn-submit button addToCart">立即购买</a>-->
+    <div id="selectToSale">加入分销列表</div>
   </div>
 </div>
 <!-- addToCart -->
