--- a/weMarketWeb/client/shopping/shopping.html
+++ b/weMarketWeb/client/shopping/shopping.html
@@ -24,7 +24,7 @@
   {{else}}
   <div style="margin-top: 80px; text-align: center; font-size: 14px;">
     <p>购物车是空的</p>
-    <a href="/categories/all?s={{seller_id}}">立即购物</a>
+    <a href="/shareProduct/{{shareProductId}}?s={{seller_id}}">立即购物</a>
   </div>
   {{/if}}
 </div>
