--- a/weMarketAdmin/client/products/productsList.html
+++ b/weMarketAdmin/client/products/productsList.html
@@ -89,7 +89,7 @@
                   <td>{{name}}</td>
                   <td>￥{{unit_price}}.00</td>
                   <td>￥{{sale_price}}.00</td>
-                  <td>￥{{profit_price}}.00</td>
+                  <td>￥{{getDefaultProfitPrice profit_price sale_price}}</td>
                   <td>{{number}}</td>
                   <td style="text-align: center;">
                     <button id="{{_id}}" type="button" class="modifyProduct btn btn-xs bg-purple"> 修改</button>
