--- a/weMarketWeb/client/saleOrders/saleOrders.html
+++ b/weMarketWeb/client/saleOrders/saleOrders.html
@@ -8,11 +8,11 @@
   <!-- 容器 -->
   <div class="weui-tab">
     <div class="weui-navbar">
-      <div class="weui-navbar__item weui-bar__item--on" id="complate">
-        已完成
-      </div>
-      <div class="weui-navbar__item" id="waiting">
+      <div class="weui-navbar__item weui-bar__item--on" id="waiting">
         进行中
+      </div>
+      <div class="weui-navbar__item" id="complate">
+        已完成
       </div>
     </div>
   </div>
@@ -27,11 +27,11 @@
       <div class="ft-rigtht"><i class="fa fa-angle-right fa-fw"></i></div>
       <div class="body">
         <div class="productImg">
-          <img src="{{product.product_img}}"/>
+          <img src="{{product_img}}"/>
         </div>
-        <h4>{{product.product_name}}</h4>
+        <h4>{{product_name}}</h4>
         <p>商品数量：{{total_num}}</p>
-        <p class="totalPrice">商品总价：{{total_price}}</p>
+        <p class="totalPrice">分成：￥ {{profit_price}}元</p>
       </div>
     </li>
   {{/each}}
