add saleOrders count

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -38,11 +38,11 @@
   </div>
   <ul class="mySale goSaleOrdersList">
     <li class="complate">
-      <h4>0</h4>
+      <h4>{{saleOrderComplateCounts}}</h4>
       <p>已完成</p>
     </li>
     <li class="waiting">
-      <h4>0</h4>
+      <h4>{{saleOrderWaitingCounts}}</h4>
       <p>进行中</p>
     </li>
   </ul>
