只有未支付的订单，才能进行取消或者支付操作

--- a/weMarketWeb/client/orders/orderInfo.html
+++ b/weMarketWeb/client/orders/orderInfo.html
@@ -54,8 +54,9 @@
           </div>
       </div>
   </div>
-
+  {{#if showActionBtn}}
   <a id="createOrder" href="javascript:;" class="weui-btn weui-btn_primary">立即支付</a>
   <a id="cancelOrder" href="javascript:;" class="weui-btn weui-btn_default">取消订单</a>
+  {{/if}}
   </div>
 </template>
