--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -56,7 +56,7 @@
       </a>
     </li>-->
     <li class="product-item">
-      <a href="/product/{{product_id}}?s={{seller_id}}">
+      <a href="/product/{{_id}}?s={{seller_id}}">
       <img src="{{mainImage}}"/>
       <div class="product-info">
         <h3 class="product-name">{{name}}</h3>
