--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -72,8 +72,15 @@
     </li>
   </ul>
 
-  <div class="weui-cells goAddrList">
-    <div class="weui-cell">
+  <div class="weui-cells">
+    <div class="weui-cell goMyShop">
+      <div class="weui-cell__hd"><img src=""></div>
+      <div class="weui-cell__bd">
+        <p>我的店铺</p>
+      </div>
+      <div class="weui-cell__ft"><i class="fa fa-angle-right fa-fw"></i></div>
+    </div>
+    <div class="weui-cell goAddrList">
       <div class="weui-cell__hd"><img src=""></div>
       <div class="weui-cell__bd">
         <p>收货地址管理</p>
