--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -1,6 +1,6 @@
 <template name="productHeader">
   <div class="back"><i class="fa fa-angle-left"></i></div>
-  <div class="title">商品详情</div>
+  <div class="title">{{name}}</div>
 </template>
 <template name="product">
 <div class="product">
