--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -53,17 +53,12 @@
   </div>
 
   <div class="filter-btn dis-box">
-    <!--<a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
+    <a href="/shopping?s={{seller_id}}" class="filter-btn-flow filter-btn-a">
       <i class="fa fa-shopping-cart"></i>
       <p style="margin: 0;">购物车</p>
     </a>
     <a type="button" class="btn-cart button addToCart">加入购物车</a>
-    <a type="button" class="btn-submit button addToCart">立即购买</a>-->
-    {{#if isInDistributo}}
-    <div id="shareTheProduct">分 享 (分成￥{{profit_price}}.00元)</div>
-    {{else}}
-    <div id="selectToSale">加入分销列表</div>
-    {{/if}}
+    <a type="button" class="btn-submit button addToCart">立即购买</a>
   </div>
 </div>
 <!-- addToCart -->
