add: 店铺分类页面

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -73,6 +73,7 @@
   </ul>
 
   <div class="weui-cells">
+    {{#if isDistributor}}
     <div class="weui-cell goMyShop">
       <div class="weui-cell__hd"><img src=""></div>
       <div class="weui-cell__bd">
@@ -80,6 +81,7 @@
       </div>
       <div class="weui-cell__ft"><i class="fa fa-angle-right fa-fw"></i></div>
     </div>
+    {{/if}}
     <div class="weui-cell goAddrList">
       <div class="weui-cell__hd"><img src=""></div>
       <div class="weui-cell__bd">
