--- a/weMarketWeb/client/shops/shopHome.html
+++ b/weMarketWeb/client/shops/shopHome.html
@@ -13,6 +13,44 @@
   <!-- shopInfo end-->
 
   <!-- 产品列表 -->
+  <!-- Swiper start-->
+  <div class="swiper-container">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475869586530689271.png"/></div>
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475947014493634167.png"/></div>
+      <div class="swiper-slide"><img src="http://shop.ectouch.cn/v2/data/attached/afficheimg/1475869618740468734.png"/></div>
+    </div>
+    <div class="swiper-pagination"></div>
+  </div>
+  <!-- Swiper end -->
+  <!-- 快速导航 -->
+  <ul class="fast-nav">
+    <li>
+      <a href="/shop/c/{{seller_id}}/all">
+        <img src="/home/nav_0.png"/>
+        <p>全部分类</p>
+      </a>
+    </li>
+    <li>
+      <a href="/orders/list?s={{seller_id}}">
+        <img src="/home/nav_1.png"/>
+        <p>我的订单</p>
+      </a>
+    </li>
+    <li>
+      <a href="/shopping?s={{seller_id}}">
+        <img src="/home/nav_2.png"/>
+        <p>购物车</p>
+      </a>
+    </li>
+    <li>
+      <a href="/me?s={{seller_id}}">
+        <img src="/home/nav_3.png"/>
+        <p>个人中心</p>
+      </a>
+    </li>
+  </ul>
+  <!-- 快速导航 END -->
   <ul class="product-list">
   {{#each products}}
     <li class="product-item">
