完善我的商品页面

--- a/weMarketWeb/client/shops/addCategories.html
+++ b/weMarketWeb/client/shops/addCategories.html
@@ -21,7 +21,7 @@
   
   <ul class="categoriesLists">
     {{#each categories}}
-    <li class="categoriesItem curr">
+    <li id="{{_id}}" class="categoriesItem {{isSelected _id}}">
       <div class="categorieInfo">
       {{name}}
       </div>
