--- a/weMarketWeb/client/shops/shopHome.html
+++ b/weMarketWeb/client/shops/shopHome.html
@@ -67,5 +67,15 @@
   {{/each}}
   </ul>
   <!-- 产品列表 END -->
+
+  <!--分享提示 START-->
+
+  <div id="shopShareTip" class="weui-popup__container close-popup" style="z-index:9999;">
+    <div class="weui-popup__overlay"></div>
+    <div class="weui-popup__modal" style="background:rgba(0,0,0,.78); color:#fff; text-align:right;">
+      <img src="/img/share-tips.png" style="width:60%; margin:16px;"/>
+    </div>
+  </div>
+  <!-- 分享提示 END -->
 </div>
 </template>
