--- a/weMarketWeb/client/myShop/myShopSetting.html
+++ b/weMarketWeb/client/myShop/myShopSetting.html
@@ -20,7 +20,7 @@
         <label class="weui-label">真实姓名</label>
       </div>
       <div class="weui-cell__bd">
-        <input id="name" class="weui-input" type="text" placeholder="请输入真实姓名" value="{{user.profile.name}}">
+        <input id="name" class="weui-input" type="text" placeholder="请输入真实姓名" value="{{user.name}}">
       </div>
     </div>
     <div class="weui-cell">
@@ -28,7 +28,7 @@
         <label class="weui-label">手机号</label>
       </div>
       <div class="weui-cell__bd">
-        <input id="mobile" class="weui-input" type="tel" placeholder="请输入手机号" value="{{user.profile.mobile}}">
+        <input id="mobile" class="weui-input" type="tel" placeholder="请输入手机号" value="{{user.mobile}}">
       </div>
     </div>
   </div>
@@ -39,7 +39,7 @@
         <label class="weui-label">支付宝</label>
       </div>
       <div class="weui-cell__bd">
-        <input id="alipay" class="weui-input" type="text" placeholder="请输入支付宝帐号" value="{{user.profile.alipay}}">
+        <input id="alipay" class="weui-input" type="text" placeholder="请输入支付宝帐号" value="{{user.alipay}}">
       </div>
     </div>
   </div>
