我的店铺， 店铺名称从db获取

--- a/weMarketWeb/client/myShop/myShop.html
+++ b/weMarketWeb/client/myShop/myShop.html
@@ -5,7 +5,7 @@
     <div class="shopIcon">
       <img src="/img/userPicture.png" />
     </div>
-    <div class="shopName">SRAITA 的小店</div>
+    <div class="shopName">{{shopName}}</div>
   </div>
   <div class="shopInfoButtons">
     <div id="share" class="shop-set-btn"><i class="fa fa-share-alt"></i><span> 分享</span></div>
