--- a/weMarketWeb/client/myShop/myShop.html
+++ b/weMarketWeb/client/myShop/myShop.html
@@ -3,7 +3,7 @@
   <!-- shopInfo -->
   <div class="shopInfo">
     <div class="shopIcon">
-      <img src="/img/userPicture.png" />
+      <img src="{{icon}}" />
     </div>
     <div class="shopName">{{shopName}}</div>
   </div>
