店铺商品获取

--- a/weMarketWeb/client/shops/shopHome.html
+++ b/weMarketWeb/client/shops/shopHome.html
@@ -3,9 +3,9 @@
   <!-- shopInfo -->
   <div class="shopInfo">
     <div class="shopIcon">
-      <img src="/img/userPicture.png" />
+      <img src="{{icon}}" />
     </div>
-    <div class="shopName">SRAITA 的小店</div>
+    <div class="shopName">{{shopName}}</div>
   </div>
   <div class="shopInfoButtons">
     <div id="share" class="shop-set-btn"><i class="fa fa-share-alt"></i><span> 分享</span></div>
