--- a/weMarketWeb/client/shops/shopHome.html
+++ b/weMarketWeb/client/shops/shopHome.html
@@ -26,25 +26,25 @@
   <!-- 快速导航 -->
   <ul class="fast-nav">
     <li>
-      <a href="/shop/c/{{seller_id}}/all">
+      <a href="/shop/c/{{_id}}/all">
         <img src="/home/nav_0.png"/>
         <p>全部分类</p>
       </a>
     </li>
     <li>
-      <a href="/orders/list?s={{seller_id}}">
+      <a href="/orders/list">
         <img src="/home/nav_1.png"/>
         <p>我的订单</p>
       </a>
     </li>
     <li>
-      <a href="/shopping?s={{seller_id}}">
+      <a href="/shopping">
         <img src="/home/nav_2.png"/>
         <p>购物车</p>
       </a>
     </li>
     <li>
-      <a href="/me?s={{seller_id}}">
+      <a href="/me">
         <img src="/home/nav_3.png"/>
         <p>个人中心</p>
       </a>
