页面跳转检查

--- a/weMarketWeb/client/me/addr/addrLIst.html
+++ b/weMarketWeb/client/me/addr/addrLIst.html
@@ -6,7 +6,7 @@
 <template name="addrList">
 <div class="addrList">
   <div class="weui-cells">
-    <a class="weui-cell weui-cell_access" href="/addr/new?s={{seller_id}}">
+    <a class="weui-cell weui-cell_access" href="/addr/new">
       <div class="weui-cell__bd">
         <p>新增地址</p>
       </div>
