--- a/weMarketWeb/client/home/home.html
+++ b/weMarketWeb/client/home/home.html
@@ -45,18 +45,8 @@
 	</div>
   <ul class="product-list">
   {{#each products}}
-    <!--<li class="product-item">
-      <a href="/product/{{product_id}}?s={{seller_id}}">
-      <img src="{{mainImage}}"/>
-      <div class="product-info">
-        <h3 class="product-name">{{name}}</h3>
-        <p class="product-price">￥{{sale_price}}元 </p>
-        <p class="profit-price">可获利：￥ {{profit_price}}.00元</p>
-      </div>
-      </a>
-    </li>-->
     <li class="product-item">
-      <a href="/product/{{_id}}?s={{seller_id}}">
+      <a href="/product/{{_id}}">
       <img src="{{mainImage}}"/>
       <div class="product-info">
         <h3 class="product-name">{{name}}</h3>
