--- a/weMarketWeb/client/me/addr/addrNew.html
+++ b/weMarketWeb/client/me/addr/addrNew.html
@@ -1,6 +1,6 @@
 <template name="addrNewHeader">
   <div class="back"><i class="fa fa-angle-left"></i></div>
-  <div class="title">新增收货地址</div>
+  <div class="title">{{title}}</div>
 </template>
 
 <template name="addrNew">
