添加分成比例显示

--- a/weMarketWeb/client/shops/addCategories.html
+++ b/weMarketWeb/client/shops/addCategories.html
@@ -23,7 +23,8 @@
     {{#each categories}}
     <li id="{{_id}}" class="categoriesItem {{isSelected _id}}">
       <div class="categorieInfo">
-      {{name}}
+      <h4>{{name}}</h4>
+      <p class="profit">分成比例： {{profit}}‰ </p>
       </div>
     </li>
     {{/each}}
