--- a/weMarketWeb/client/orders/orderSuccess.html
+++ b/weMarketWeb/client/orders/orderSuccess.html
@@ -23,7 +23,11 @@
   <div class="weui-msg__extra-area">
     <div class="weui-footer">
       <p class="weui-footer__links">
-        <a href="/?s={{seller_id}}" class="weui-footer__link">返回首页</a>
+        {{#if isDistributor}}
+        <a href="/" class="weui-footer__link">返回首页</a>
+        {{else}}
+        <a href="/shop/{{shopId}}" class="weui-footer__link">返回首页</a>
+        {{/if}}
       </p>
     </div>
   </div>
