分享地址修正

--- a/weMarketWeb/client/myShop/myShop.html
+++ b/weMarketWeb/client/myShop/myShop.html
@@ -27,7 +27,7 @@
   <ul class="product-list">
   {{#each products}}
     <li class="product-item">
-      <a href="/product/{{product_id}}?s={{seller_id}}">
+      <a href="/product/{{_id}}">
       <img src="{{mainImage}}"/>
       <div class="product-info">
         <h3 class="product-name">{{name}}</h3>
