--- a/weMarketWeb/client/product/product.html
+++ b/weMarketWeb/client/product/product.html
@@ -19,7 +19,8 @@
   <div class="product-info">
     <h4 class="name">{{name}}</h4>
     <div class="sale-price">￥ {{sale_price}}.00</div>
-    <div class="unit-price">可分成  <span>￥ {{profit_price}}.00元</span></div>
+    <p class="unit_price"><del>￥{{unit_price}}</del></p>
+    <!--<div class="unit-price">可分成  <span>￥ {{profit_price}}.00元</span></div>-->
     <div class="other-info">
       <span style="text-align: left;">销量： 0</span>
       <span style="text-align: right;">库存： {{number}}</span>
