佣金分成等基本UI

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -32,8 +32,8 @@
       <p>积分</p>
     </li>
   </ul>
-  <div class="my-ul-title goSaleOrdersList">
-    <h4>我的分销</h4>
+  <!--<div class="my-ul-title goSaleOrdersList">
+    <h4>我的佣金</h4>
     <span>查看全部<i class="fa fa-angle-right fa-fw"></i></span>
   </div>
   <ul class="mySale goSaleOrdersList">
@@ -43,9 +43,9 @@
     </li>
     <li class="waiting">
       <h4>{{saleOrderWaitingCounts}}</h4>
-      <p>进行中</p>
+      <p>正在处理</p>
     </li>
-  </ul>
+  </ul>-->
   {{/if}}
   <!-- 分销商专属 END -->
 
@@ -78,6 +78,13 @@
       <div class="weui-cell__hd"><img src=""></div>
       <div class="weui-cell__bd">
         <p>我的店铺</p>
+      </div>
+      <div class="weui-cell__ft"><i class="fa fa-angle-right fa-fw"></i></div>
+    </div>
+    <div class="weui-cell goSaleOrdersList">
+      <div class="weui-cell__hd"><img src=""></div>
+      <div class="weui-cell__bd">
+        <p>我的佣金</p>
       </div>
       <div class="weui-cell__ft"><i class="fa fa-angle-right fa-fw"></i></div>
     </div>
