相应的佣金计算

--- a/weMarketWeb/client/me/me.html
+++ b/weMarketWeb/client/me/me.html
@@ -25,27 +25,13 @@
   <ul class="myWallet">
     <li class="wallet">
       <h4>0.00</h4>
-      <p>余额</p>
+      <p>账户余额(元)</p>
     </li>
     <li class="bitCon">
-      <h4>0</h4>
-      <p>积分</p>
+      <h4>0.00</h4>
+      <p>佣金总额(元)</p>
     </li>
   </ul>
-  <!--<div class="my-ul-title goSaleOrdersList">
-    <h4>我的佣金</h4>
-    <span>查看全部<i class="fa fa-angle-right fa-fw"></i></span>
-  </div>
-  <ul class="mySale goSaleOrdersList">
-    <li class="complate">
-      <h4>{{saleOrderComplateCounts}}</h4>
-      <p>已完成</p>
-    </li>
-    <li class="waiting">
-      <h4>{{saleOrderWaitingCounts}}</h4>
-      <p>正在处理</p>
-    </li>
-  </ul>-->
   {{/if}}
   <!-- 分销商专属 END -->
 
